# udemy_cmake_tutorial_02

cmake_project2/: CMakeLists.txt  hello.cc
command line calculator/src/: CMakeLists.txt
command line calculator/src/app/: CMakeLists.txt
command line calculator/src/calculator/: CMakeLists.txt
command line calculator/src/calculator/test/: test_calculator.cc
